Made extension reuse imagebox instead of creating more divs, changed css,and added a mode toggle

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NOTEPAD</title>
+    <title>Quote-A-Meme</title>
     <meta charset="utf-8" />
     <script defer src="main.js"></script>
     <link rel="styleSheet" href="style.css" />
   </head>
   <body>
-    <button id="apiRequest">Make Request</button>
+    <div class="button-container">
+      <button id="api-request">MEME ME</button>
+    </div>
+    <div class="image-box-container"></div>
+    <div class="text-container"></div>
   </body>
 </html>
