added a few styling issues and fixed mode

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>Quote-A-Meme</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="4553013.ico" />
     <script defer src="main.js"></script>
     <link rel="styleSheet" href="style.css" />
   </head>
