--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="button-container">
-      <button id="api-request">MEME ME</button>
+      <button id="api-request">Inspire me?</button>
     </div>
     <div class="image-box-container"></div>
     <div class="text-container"></div>
